added gitignore to compiled tex data

--- a/doc/ant_behaviour_paper.tex
+++ b/doc/ant_behaviour_paper.tex
@@ -45,7 +45,7 @@
 \end{minipage}
 &
 \begin{minipage}{6cm}
-\vspace{2mm} \large Name 1
+\vspace{2mm} \large Georg Wiedebach
 
  \vspace{\baselineskip}
 
@@ -53,7 +53,7 @@
 &
 \begin{minipage}{6cm}
 
-\large Name 2
+\large Wolf Vollprecht
 
 \end{minipage}
 \end{tabular}
