--- a/doc/cover.tex
+++ b/doc/cover.tex
@@ -13,7 +13,7 @@
 \bigskip
 
 
-\LARGE{ 	Lecture with Computer Exercises:\\ }
+\LARGE{ Lecture with Computer Exercises:\\ }
 \LARGE{ Modelling and Simulating Social Systems with MATLAB\\}
 
 \bigskip
@@ -34,8 +34,8 @@
 \begin{tabular}{|c|}
 \hline
 \\
-\textbf{\LARGE{Insert Title Here}}\\
-\textbf{\LARGE{...}}\\
+\textbf{\LARGE{ Modelling Desert Ant Behaviour }}\\
+\textbf{\LARGE{ with a special focus on desert ant movement }}\\
 \\
 \hline
 \end{tabular}
@@ -45,7 +45,7 @@
 
 \bigskip
 
-\LARGE{Name 1 \& Name 2}
+\LARGE{Georg Wiedebach \& Wolf Vollprecht}
 
 
 
@@ -66,7 +66,7 @@
 \bigskip
 
 Zurich\\
-May 2008\\
+December 2011\\
 
 \end{center}
 
