--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -8,6 +8,8 @@
 \usepackage{subfig}
 \usepackage{amssymb, amsmath}
 \usepackage{hyperref}
+\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
+
 \hypersetup{
     colorlinks,%
     citecolor=black,%
@@ -56,15 +58,14 @@
 \end{minipage}
 &
 \begin{minipage}{6cm}
-\vspace{2mm} \large Georg Wiedebach
-
- \vspace{\baselineskip}
-
+ \large Georg Wiedebach\\
+ \href{mailto:georgwi@student.ethz.ch}{georgwi@student.ethz.ch}
 \end{minipage}
 &
 \begin{minipage}{6cm}
 
-\large Wolf Vollprecht
+\large Wolf Vollprecht\\
+\href{mailto:wolfv@student.ethz.ch}{wolfv@student.ethz.ch}
 
 \end{minipage}
 \end{tabular}
