--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -175,6 +175,10 @@ Landmark & turquoise & blue circle \\
 \end{table}
 
 \subsection{Ant}
+
+The class \texttt{ant} mainly contains the current position of the ant, the local vectors on landmarks and the path integrated global vector which should always point to the nest (as long as the ant moves are coherent).
+We built our ant around the most important method: \texttt{move}. The  \texttt{move} function is called out of two different methods the  \texttt{find\_food} and the \texttt{return\_to\_nest}. In the following all methods of the class \texttt{ant} are described:
+
 \section{Simulation Results and Discussion}
 
 \section{Summary and Outlook}
