--- a/doc/cover.tex
+++ b/doc/cover.tex
@@ -34,8 +34,9 @@
 \begin{tabular}{|c|}
 \hline
 \\
-\textbf{\LARGE{ Modelling Desert Ant Behaviour }}\\
-\textbf{\LARGE{ with a special focus on desert ant movement }}\\
+\textbf{\LARGE{ Desert Ant Behaviour }}\\
+\textbf{\LARGE{ Modelling desert ants with }}\\
+\textbf{\LARGE{ a focus on movement and navigation }}\\
 \\
 \hline
 \end{tabular}
